; ModuleID = '/home/carl/AnghaBench/php-src/ext/readline/extr_readline_cli.c_cli_completion_generator_class.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/readline/extr_readline_cli.c_cli_completion_generator_class.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@class_table = common dso_local global i32 0, align 4
@rl_completion_append_character = common dso_local global i8 0, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i64, i32*)* @cli_completion_generator_class to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @cli_completion_generator_class(i8* %0, i64 %1, i32* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_2__*, align 8
  %8 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = load i64, i64* %5, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = load i32, i32* @class_table, align 4
  %13 = call i32 @EG(i32 %12)
  %14 = bitcast %struct.TYPE_2__** %7 to i8**
  %15 = call i8* @cli_completion_generator_ht(i8* %9, i64 %10, i32* %11, i32 %13, i8** %14)
  store i8* %15, i8** %8, align 8
  %16 = load i8*, i8** %8, align 8
  %17 = icmp ne i8* %16, null
  br i1 %17, label %18, label %24

18:                                               ; preds = %3
  store i8 0, i8* @rl_completion_append_character, align 1
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @ZSTR_VAL(i32 %21)
  %23 = call i8* @strdup(i32 %22)
  store i8* %23, i8** %8, align 8
  br label %24

24:                                               ; preds = %18, %3
  %25 = load i8*, i8** %8, align 8
  ret i8* %25
}

declare dso_local i8* @cli_completion_generator_ht(i8*, i64, i32*, i32, i8**) #1

declare dso_local i32 @EG(i32) #1

declare dso_local i8* @strdup(i32) #1

declare dso_local i32 @ZSTR_VAL(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
